<resources>
    <string name="app_name">If Then Planner</string>
    <string name="empty">プランを追加しましょう！</string>
    <string name="if_statement">If</string>
    <string name="then_statement">Then</string>
    <string name="stop_button_discription">Stop</string>
    <string name="done_button_discription">Done</string>
    <string name="head_string">新しいプランを作成</string>
    <string name="if_title">If- もし...</string>
    <string name="if_hint">条件・シチュエーションをここに入力</string>
    <string name="then_title">...する- Then</string>
    <string name="then_hint">行動をここに入力</string>
    <string name="button_text">保存</string>
    <string name="button_detail_save">変更を保存</string>
    <string name="button_detail_done">完了にする</string>
    <string name="option_clear">リストを空にする</string>
    <string name="option_clear_all">すべてのプランを削除する</string>
    <string name="option_share">シェア</string>
    <string name="drw_important">重要</string>
    <string name="drw_trash">ゴミ箱</string>
    <string name="drw_reminder">リマインダー</string>
    <string name="drw_setting">設定</string>
    <string name="drw_tag">タグ</string>
    <string name="drw_pink">ピンク</string>
    <string name="drw_red">レッド</string>
    <string name="drw_blue">ブルー</string>
    <string name="drw_purple">パープル</string>
    <string name="drw_green">グリーン</string>
    <string name="drw_grey">グレー</string>
    <string name="drw_black">ブラック</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="clear">削除</string>
    <string name="ask_if">作成されたすべてのプランが削除されます。よろしいですか？</string>
    <string name="edit_context">編集する</string>
    <string name="title">タイトル</string>
    <string name="title_hint">プランのタイトル</string>
    <string name="choose_color">カラータグ</string>
    <string name="notification">通知</string>
    <string name="open_drawer">ドロワーを開く</string>
    <string name="close_drawer">ドロワーを閉じる</string>
    <string name="channel_name">通知</string>
    <string name="channel_description">If Then Planをリマインド</string>
    <string name="ask_if_done">完了しましたか？</string>
    <string name="toolbar_all">すべてのプラン</string>
    <string name="option_toolbar">設定</string>
    <string name="option_plan">プラン</string>
    <string name="option_reminder_null">リマインダーを無効にする</string>
    <string name="option_reminder_clear">セットされたリマインダーを削除する</string>
    <string name="option_tag">カラータグの詳細設定</string>
    <string name="option_notification">通知の設定</string>
    <string name="tagOption_toolbar">カラータグの詳細設定</string>
    <string name="ask_if_notification">セットされたすべてのリマインダーを削除しますか？</string>
    <string name="tagOption_hint">タグの名前</string>
    <string name="tagOption_name">タグネーム（最大8文字）</string>
</resources>
