<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewPlan">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/stop_button_discription"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="stopAdding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_black_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/done_button_discription"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="doneCreatingCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_check_24dp" />

        <TextView
            android:id="@+id/head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/head_string"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/grey_line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_text" />

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grey_line1">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="267dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <View
            android:id="@+id/grey_line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout2"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout1"
            tools:layout_editor_absoluteX="-16dp" />

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grey_line2">

            <TextView
                android:id="@+id/if_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/if_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/if_title"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="267dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/if_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/if_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/then_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/if_input"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="267dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/then_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/then_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/then_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/then_title"
                android:textAlignment="viewEnd"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/grey_line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/grey_line3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_color"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginStart="64dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:id="@+id/grey_line4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="100dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grey_line3" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_style"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="doneButton"
            android:text="@string/button_text"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grey_line4" />

        <Button
            android:id="@+id/button_notification"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_style_prime"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="setNotificationButton"
            android:text="通知"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_style_prime"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="setTimeButton"
            android:text="時刻"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_notification" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>