<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reminder">

    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/stop_button_discription"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="finishReminding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_if_done"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cross"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/head_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/color_tag"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/tag_green" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:gravity="bottom"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp"
                    android:text="タイトル" />


            </LinearLayout>

            <View
                android:id="@+id/grey_line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/line_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/head_linear_layout"
                app:layout_constraintBottom_toTopOf="@id/if_content"/>

            <LinearLayout
                android:id="@+id/if_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/then_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grey_line1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/if_statement"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/if_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:text="@string/if_hint" />

            </LinearLayout>

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/ic_then_arrow_32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/if_content" />

            <LinearLayout
                android:id="@+id/then_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/arrow"
                app:layout_constraintTop_toBottomOf="@id/if_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/then_statement"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/then_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:text="@string/then_hint" />

            </LinearLayout>

            <View
                android:id="@+id/grey_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/line_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/then_content" />

            <ImageView
                android:id="@+id/bell_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grey_line2"
                android:src="@drawable/ic_access_time_black_24dp"/>

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:text="3月7日 午後4時30分"
                android:textSize="18sp"
                android:textColor="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@id/grey_line2"
                app:layout_constraintStart_toEndOf="@id/bell_icon"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_style"
        android:clickable="true"
        android:onClick="toMain"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_check_white_32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>